correctif d'une taille d'image en version mobile

--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ flex-wrap: wrap;
 	object-fit: cover;
 	border-top-right-radius: 30px;
 	border-top-left-radius: 30px;
-	width: 90vw;
+	width: 95vw;
 	height: 31vw;
 }
 
